Optimize gradle running